--- a/app/src/main/res/layout/add_todo.xml
+++ b/app/src/main/res/layout/add_todo.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/todo_add"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="100dp">
 
     <Button
         android:id="@+id/todo_add_button"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginLeft="120dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="120dp"
-        android:text="일정 추가"
+        android:layout_marginBottom="16dp"
+        android:text="@string/add_todo"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/sky_700"
         app:icon="@drawable/ic_baseline_add_24"
