--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -46,9 +46,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/sky_700"
-        android:tint="@color/black"
+        android:background="@color/sky_200"
         android:contentDescription="@string/location"
+        android:tint="@color/sky_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/menu_button"
         app:layout_constraintStart_toEndOf="@+id/todoText"
@@ -71,5 +71,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/map_button"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_baseline_more_vert_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
