--- a/app/src/main/res/layout/add_todo.xml
+++ b/app/src/main/res/layout/add_todo.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/todo_add"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    >
 
     <Button
         android:id="@+id/todo_add_button"
