--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -50,7 +50,7 @@
         android:contentDescription="@string/location"
         android:tint="@color/sky_700"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/menu_button"
+        app:layout_constraintEnd_toStartOf="@+id/delete_button"
         app:layout_constraintStart_toEndOf="@+id/todoText"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_my_location_24"
@@ -58,19 +58,20 @@
         tools:srcCompat="@drawable/ic_baseline_my_location_24" />
 
     <ImageButton
-        android:id="@+id/menu_button"
+        android:id="@+id/delete_button"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/white"
+        android:background="#FFAB91"
         android:contentDescription="@string/menu"
+        android:tint="#FF5722"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/map_button"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+        app:srcCompat="@drawable/ic_baseline_delete_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
