--- a/app/src/main/res/layout/add_todo.xml
+++ b/app/src/main/res/layout/add_todo.xml
@@ -11,12 +11,12 @@
     <Button
         android:id="@+id/todo_add_button"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="120dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/add_todo"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/sky_700"
