--- a/app/src/main/res/layout/activity_add_todo.xml
+++ b/app/src/main/res/layout/activity_add_todo.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         >
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/whatTodoText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
