--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,25 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:timePickerStyle">@style/TimePicker</item>
 
         <item name="actionBarTheme">@style/Theme.Design.NoActionBar</item>
     </style>
+
+    <style name="TimePicker" parent="android:Widget.Material.TimePicker">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">#81D4FA</item>
+        <item name="colorPrimaryVariant">#B39DDB</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color.-->
+        <item name="colorSecondary">#FF7043</item>
+        <item name="colorSecondaryVariant">#FFCA28</item>
+        <item name="colorOnSecondary">#FFE0B2</item>
+        <item name="android:timePickerMode">spinner</item>
+
+    </style>
+
+
+
+
 </resources>
