--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:timePickerStyle">@style/TimePicker</item>
+        <!-- 타이틀바 숨김 -->
+        <item name="windowNoTitle">true</item>
 
-        <item name="actionBarTheme">@style/Theme.Design.NoActionBar</item>
     </style>
 
     <style name="TimePicker" parent="android:Widget.Material.TimePicker">
