--- a/app/src/main/res/drawable/add_button.xml
+++ b/app/src/main/res/drawable/add_button.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#B7DBF8">
 
-    <solid android:color="@color/white"/>
-    <corners android:radius="40dp"/>
-    <stroke android:color="#64B5F6"
-        android:width="6dp"/>
+    <item
+        android:id="@+id/add_btn_background">
+        <shape
+            android:shape="rectangle">
 
+            <solid android:color="@color/white"/>
+            <corners android:radius="40dp"/>
+            <stroke android:color="#64B5F6"
+                android:width="6dp"/>
 
+        </shape>
 
+    </item>
 
-</shape>
+</ripple>
