--- a/app/src/main/res/drawable/delete_button.xml
+++ b/app/src/main/res/drawable/delete_button.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+android:color="#EF9AB7">
 
-    <solid android:color="@color/white"/>
-    <corners android:radius="40dp"/>
-    <stroke android:color="#F06292"
-        android:width="6dp"/>
+    <item
+        android:id="@+id/del_btn_background">
+        <shape
+            android:shape="rectangle">
 
-</shape>
+            <solid android:color="@color/white"/>
+            <corners android:radius="40dp"/>
+            <stroke android:color="#F06292"
+                android:width="6dp"/>
+
+        </shape>
+    </item>
+
+</ripple>
