--- a/app/src/main/res/layout/add_todo.xml
+++ b/app/src/main/res/layout/add_todo.xml
@@ -26,5 +26,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:rippleColor="@color/black" />
+        app:rippleColor="@color/sky_200" />
 </androidx.constraintlayout.widget.ConstraintLayout>
