--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TodoWhere" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TodoWhere" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/dark_green_500</item>
         <item name="colorPrimaryVariant">@color/dark_green_700</item>
@@ -10,7 +10,8 @@
         <item name="colorSecondaryVariant">@color/sky_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/sky_200</item>
+
         <!-- Customize your theme here. -->
         <item name="android:timePickerStyle">@style/TimePicker</item>
         <!-- 타이틀바 숨김 -->
