--- a/app/src/main/res/layout/activity_add_todo.xml
+++ b/app/src/main/res/layout/activity_add_todo.xml
@@ -20,25 +20,30 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/TimeButton"
-            android:layout_width="170dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/button_layout"
+            android:elevation="10dp"
             android:text="@string/time"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/MapButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/MapButton"
-            android:layout_width="170dp"
+            android:layout_width="0dp"
             android:layout_height="55dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/button_layout"
+            android:elevation="10dp"
             android:text="@string/map"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/TimeButton"
@@ -72,11 +77,11 @@
     <fragment
         android:id="@+id/mapView"
         android:name="com.naver.maps.map.MapFragment"
-        android:layout_width="361dp"
-        android:layout_height="340dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
