--- a/app/src/main/res/drawable/button_layout.xml
+++ b/app/src/main/res/drawable/button_layout.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/dark_green_200"/>
+    <solid android:color="@color/sky_200"/>
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/dark_green_500"
+    <stroke android:color="@color/sky_500"
         android:width="2dp"/>
 
 
