--- a/app/src/main/res/layout/activity_add_todo.xml
+++ b/app/src/main/res/layout/activity_add_todo.xml
@@ -69,7 +69,8 @@
             android:id="@+id/whatTodoText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textLongMessage" />
+            android:inputType="textLongMessage"
+            android:lines="1" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
