--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -3,31 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/list_background"
-    android:elevation="4dp"
+    android:layout_height="100dp"
     android:layout_margin="2dp"
-    android:layout_height="100dp">
+    android:background="@drawable/list_background"
+    android:elevation="4dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/TextLayout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/map_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/TextLayout">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/todoText"
             android:layout_width="0dp"
-            android:gravity="center"
-            android:textSize="18dp"
             android:layout_height="0dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
+            android:gravity="center"
+            android:textSize="18dp"
             app:layout_constraintBottom_toTopOf="@id/timer_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +42,9 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/done"
+            android:clickable="false"
             android:elevation="18dp"
+            android:text="@string/done"
             app:backgroundTint="@color/sky_200"
             app:iconTint="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,10 +84,10 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
-        android:elevation="18dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/delete_list_button"
         android:contentDescription="@string/menu"
+        android:elevation="18dp"
         android:tint="#FF5722"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
