--- a/app/src/main/res/layout/add_todo.xml
+++ b/app/src/main/res/layout/add_todo.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/todo_add"
+    android:background="@drawable/list_background"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     >
