- Map Btn 클릭 시 설정한 위치 띄우기

--- a/app/src/main/res/layout/activity_add_todo.xml
+++ b/app/src/main/res/layout/activity_add_todo.xml
@@ -60,6 +60,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:hint="@string/add_todo"
+        app:boxStrokeColor="@color/sky_500"
+        app:hintTextColor="@color/sky_500"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
