--- a/app/src/main/res/layout/map_popup.xml
+++ b/app/src/main/res/layout/map_popup.xml
@@ -24,7 +24,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-
+        android:contentDescription="null"
         android:src="@drawable/ic_outline_cancel_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
