--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="What_todo" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/timer_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -45,11 +45,11 @@
             android:clickable="false"
             android:elevation="18dp"
             android:text="@string/done"
+            android:textColor="@color/white"
             app:backgroundTint="@color/sky_200"
             app:iconTint="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/todoText" />
 
