--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -34,24 +34,37 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="What_todo" />
 
-        <androidx.appcompat.widget.AppCompatButton
+
+        <com.scwang.wave.MultiWaveHeader
+            android:id="@+id/doingEffect"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:mwhWaveHeight="25dp"
+            app:mwhStartColor="@color/sky_700"
+            app:mwhCloseColor="@color/sky_200"
+            app:mwhIsRunning="false"
+            app:layout_constraintBottom_toBottomOf="@id/timer_button"
+            app:layout_constraintEnd_toEndOf="@id/timer_button"
+            app:layout_constraintStart_toStartOf="@id/timer_button"
+            app:layout_constraintTop_toTopOf="@id/timer_button"/>
+
+        <TextView
             android:id="@+id/timer_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
+
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:clickable="false"
-            android:elevation="18dp"
             android:text="@string/done"
-            android:textColor="@color/white"
-            app:backgroundTint="@color/sky_200"
-            app:iconTint="@color/black"
+            android:textColor="@color/black"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/todoText" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -95,4 +108,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
