--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -58,7 +58,8 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:text="@string/done"
-            android:textColor="@color/black"
+            android:textColor="@color/sky_text"
+            android:textStyle="bold"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
