--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="sky_200">#90CAF9</color>
     <color name="sky_500">#2196F3</color>
     <color name="sky_700">#1976D2</color>
+    <color name="sky_text">#1D1E23</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
