--- a/app/src/main/res/layout/todo_list.xml
+++ b/app/src/main/res/layout/todo_list.xml
@@ -28,6 +28,7 @@
             android:layout_marginBottom="4dp"
             android:gravity="center"
             android:textSize="18dp"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/timer_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,14 +40,15 @@
             android:id="@+id/doingEffect"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:mwhWaveHeight="25dp"
-            app:mwhStartColor="@color/sky_700"
-            app:mwhCloseColor="@color/sky_200"
-            app:mwhIsRunning="false"
             app:layout_constraintBottom_toBottomOf="@id/timer_button"
             app:layout_constraintEnd_toEndOf="@id/timer_button"
             app:layout_constraintStart_toStartOf="@id/timer_button"
-            app:layout_constraintTop_toTopOf="@id/timer_button"/>
+            app:layout_constraintTop_toTopOf="@id/timer_button"
+            app:mwhCloseColor="@color/sky_200"
+            app:mwhIsRunning="false"
+            app:mwhStartColor="@color/sky_700"
+            app:mwhVelocity="5"
+            app:mwhWaveHeight="25dp" />
 
         <TextView
             android:id="@+id/timer_button"
@@ -57,15 +59,14 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
+            android:gravity="center"
             android:text="@string/done"
             android:textColor="@color/sky_text"
             android:textStyle="bold"
-            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/todoText" />
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -109,7 +110,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_baseline_delete_24" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
