2022 - 04 - 08 알람매니져 테스트중 캘린더뷰 오류 수정중 문제점 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity">
 
-
+<!-- https://onlyfor-me-blog.tistory.com/437 캘린더뷰 커스텀 -->
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/CalendarView"
         android:layout_width="0dp"
